re-adding the footer and fixed CeNDR logo aspect ratio on smaller screens

--- a/base/static/sass/custom-styles.scss
+++ b/base/static/sass/custom-styles.scss
@@ -813,6 +813,7 @@ header {
                 .cendr-globe-logo {
                     img {
                         width: 160px !important;
+                        max-height: unset !important;
                     }
                 }
 
